Split events by game genre